Added movies/{id}/actors and movies/{id}/directors endpoints to add and see all the actors and directors of a specified movie by id. Documented it in Swagger and added it to postman collection.
